# spt

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/client/: local_api_manager.rs  local_api_proxy.rs
src/client/cli/: cli_app.rs  eval.rs  formatter.rs  main_old.rs  parser.rs
src/client/core/: playback_manager.rs  playlist_manager.rs  queue_manager.rs  search_manager.rs  status_manager.rs
src/server/db/: transaction_manager.rs
src/server/web/: routes.rs  server.rs  server_cb.rs  spt_api_manager.rs  spt_api_proxy.rs
src/util/: errors.rs  uri_helper.rs
