[package]
name = "spt"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "server"
# path = "src/server/main.rs"

# [[bin]]
# name = "cli"
# path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.17"
serde_json = "1.0"
dotenvy = "0.15"
base64 = "0.21"
rand = "0.8"
sha2 = "0.10"
url = "2.2"
open = "5"
warp = "0.3.5"
